--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-udagram-app
+  name: serverless-ng-app
 
 # Add the serverless-webpack plugin
 plugins:
@@ -20,7 +20,8 @@ provider:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
     IMAGE_ID_INDEX: ImageIdIndex
-    IMAGES_S3_BUCKET: serverless-udagram-images-$(self:provider.stage})
+    IMAGES_S3_BUCKET: serverless-ng-images-$(self:provider.stage})
+    SIGNED_URL_EXPIRATION: 300
 
   iamRoleStatements:
     - Effect: Allow
@@ -37,8 +38,13 @@ provider:
     - Effect: Allow
       Action: 
         - dynamodb:Query
-      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}    
-
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource: 'arn:aws::s3:${self:provider.environment.IMAGES_S3_BUCKET}/*'
+           
 custom:
   documentation:
     api:
