--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -20,6 +20,7 @@ provider:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
     IMAGE_ID_INDEX: ImageIdIndex
+    CONNECTIONS_TABLE: Connections_${self:provider.stage}
     IMAGES_S3_BUCKET: serverless-ng-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
@@ -44,7 +45,13 @@ provider:
         - s3:PutObject
         - s3:GetObject
       Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
-           
+    - Effect: Allow
+      Action: 
+        - dynamodb:Scan
+        - dynamodb:PutItem
+        - dynamodb:DeleteItem
+      Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}   
+
 custom:
   documentation:
     api:
@@ -114,7 +121,25 @@ functions:
             summary: Create a new image
             description: Create a new image
             requestModels:
-              'application/json': ImageRequest          
+              'application/json': ImageRequest   
+
+  SendUploadNotifications:
+    environment:
+      STAGE: ${self:provider.stage}
+      API_ID: {Ref: WebsocketsApi}
+    handler: src/lambda/s3/sendNotifications.handler
+
+  ConnnectHandler:
+    handler: src/lambda/websocket/connect.handler
+    events:
+      - websocket:
+          route: $connect
+
+  DisconnectHanlder:
+    handler: src/lambda/websocket/disconnect.handler
+    events:
+      - websocket:
+          route: $disconnect                               
 
 resources:
   Resources:
@@ -165,10 +190,28 @@ resources:
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.GROUPS_TABLE}
 
+    WebSocketConnectionsDynamoDBTable:
+        Type: AWS::DynamoDB::Table
+        Properties:
+          AttributeDefinitions:
+            -
+              AttributeName: id
+              AttributeType: S
+          KeySchema:
+            -
+              AttributeName: id
+              KeyType: HASH
+          BillingMode: PAY_PER_REQUEST
+          TableName: ${self:provider.environment.CONNECTIONS_TABLE}
+
     AttachmentsBucket:
        Type: AWS::S3::Bucket
        Properties:
          BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+         NotificationConfiguration:
+           LambdaConfigurations:
+             - Event: s3:ObjectCreated:*
+               Function: !GetAtt SendUploadNotificationsLambdaFunction.Arn
          CorsConfiguration:
            CorsRules:
             - AllowedOrigins:
@@ -182,6 +225,15 @@ resources:
                 - DELETE 
                 - HEAD 
               MaxAge: 3000
+
+    SendUploadNotificationsPermission:
+      Type: AWS::Lambda::Permission
+      Properties:
+        FunctionName: {Ref: SendUploadNotificationsLambdaFunction}
+        Principal: s3.amazonaws.com
+        Action: lambda:InvokeFunction
+        SourceAccount: {Ref: AWS::AccountId}
+        SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
 
     BucketPolicy:
       Type: AWS::S3::BucketPolicy
