commit on 'master

--- a/course-04/exercises/10-udagram-app/tsconfig.json
+++ b/course-04/exercises/10-udagram-app/tsconfig.json
@@ -8,9 +8,11 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
-    "outDir": "lib"
+    "outDir": "lib",
+    "allowSyntheticDefaultImports":true
   },
   "exclude": [
     "node_modules"
   ]
+  
 }
