--- a/course-04/exercises/10-udagram-app/package.json
+++ b/course-04/exercises/10-udagram-app/package.json
@@ -7,16 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "elasticsearch": "^15.4.1",
+    "http-aws-es": "^6.0.0",
+    "jimp": "^0.16.1",
     "serverless": "^1.41.1",
     "serverless-dynamodb-local": "^0.2.40",
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/elasticsearch": "^5.0.32",
     "@types/node": "^10.12.18",
-    "aws-sdk": "^2.1072.0",
+    "aws-sdk": "^2.1079.0",
     "serverless-aws-documentation": "^1.1.0",
-    "serverless-offline": "^8.4.0",
+    "serverless-offline": "^8.5.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^5.3.3",
