--- a/course-04/exercises/10-udagram-app/serverless.yml
+++ b/course-04/exercises/10-udagram-app/serverless.yml
@@ -23,6 +23,10 @@ provider:
     CONNECTIONS_TABLE: Connections_${self:provider.stage}
     IMAGES_S3_BUCKET: serverless-ng-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
+    THUMBNAILS_S3_BUCKET: serverless-udagram-thumbnail-${self:provider.stage}
+    #AUTH_0_SECRET: 8OTNzjEk6dDzc5P98JegII6y1zhlqKqYJ16OczNhH0kF7VtZ7vSePNaaJA2pIiEA 
+    AUTH_0_SECRET_ID: Auth0Secret_${self:provider.stage}
+    AUTH_0_SECRET_FIELD: auth0Secret
 
   iamRoleStatements:
     - Effect: Allow
@@ -51,8 +55,17 @@ provider:
         - dynamodb:PutItem
         - dynamodb:DeleteItem
       Resource: arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.CONNECTIONS_TABLE}   
+    - Effect: Allow
+      Action: 
+        - secretsmanager:GetSecretValue
+      Resource: {Ref: Auth0Secret}  
+    - Effect: Allow
+      Action:
+        - kms:Decrypt
+      Resource: !GetAtt KMSKey.Arn 
 
 custom:
+  topicName: imagesTopic-${self:provider.stage}
   documentation:
     api:
       info:
@@ -71,6 +84,12 @@ custom:
 
 functions:
 
+  RS256Auth:
+    handler: src/lambda/auth/rs256Auth0Authorizer.handler
+
+  Auth:
+   handler: src/lambda/auth/auth0Authorizer.handler
+
   GetGroups:
     handler: src/lambda/http/getGroups.handler
     events:
@@ -86,6 +105,7 @@ functions:
           method: post
           path: groups
           cors: true
+          authorizer: RS256Auth
           reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new group
@@ -116,18 +136,48 @@ functions:
           method: post
           path: groups/{groupId}/images
           cors: true
+          authorizer: RS256Auth
           reqValidatorName: RequestBodyValidator
           documentation:
             summary: Create a new image
             description: Create a new image
             requestModels:
-              'application/json': ImageRequest   
+              'application/json': ImageRequest  
 
-  SendUploadNotifications:
-    environment:
-      STAGE: ${self:provider.stage}
-      API_ID: {Ref: WebsocketsApi}
-    handler: src/lambda/s3/sendNotifications.handler
+      #SendUploadNotifications:
+      #  environment:
+      #    STAGE: ${self:provider.stage}
+      #    API_ID: {Ref: WebsocketsApi}
+      #  handler: src/lambda/s3/sendNotifications.handler
+
+    SendUploadNotifications:
+      environment:
+        STAGE: ${self:provider.stage}
+        API_ID: {Ref: WebsocketsApi}
+      handler: src/lambda/s3/sendNotifications.handler
+      events:
+        - sns:
+            arn:
+              fn::Join:
+                - ':'
+                - - arn:aws:sns
+                  - Ref: AWS::Region
+                  - Ref: AWS::AccountId
+                  - ${self:custom.topicName}
+            topicName: ${self:custom.topicName}      
+ 
+    ResizeImage:
+      handler: src/lambda/s3/resizeImage.handler
+      events:
+        - sns:
+            arn:
+              fn::Join:
+                - ':'
+                - - arn:aws:sns
+                  - Ref: AWS::Region
+                  - Ref: AWS::AccountId
+                  - ${self:custom.topicName}
+            topicName: ${self:custom.topicName}
 
   ConnnectHandler:
     handler: src/lambda/websocket/connect.handler
@@ -135,14 +185,33 @@ functions:
       - websocket:
           route: $connect
 
-  DisconnectHanlder:
+  DisconnectHandler:
     handler: src/lambda/websocket/disconnect.handler
     events:
       - websocket:
-          route: $disconnect                               
+          route: $disconnect  
+
+  SyncWithElasticsearch:
+    environment:
+      ES_ENDPOINT: !GetAtt ImagesSearch.DomainEndpoint
+    handler: src/lambda/dynamoDb/elasticSearchSync.handler
+    events:
+      - stream:
+          type: dynamodb 
+          arn: !GetAtt ImagesDynamoDBTable.StreamArn                                    
 
 resources:
   Resources:
+    GatewayResponseDefault4XX:
+      Type: 'AWS::ApiGateway::GatewayResponse'
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origion: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type, X-Amz-Date,Authorization'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"  
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          {Ref: 'ApiGatewayRestApi'}
 
     ImagesDynamoDBTable:
       Type: AWS::DynamoDB::Table
@@ -167,6 +236,8 @@ resources:
             Projection:
                 ProjectionType: ALL      
         BillingMode: PAY_PER_REQUEST
+        StreamSpecification:
+          StreamViewType: NEW_IMAGE
         TableName: ${self:provider.environment.IMAGES_TABLE}
 
     RequestBodyValidator:
@@ -204,37 +275,120 @@ resources:
           BillingMode: PAY_PER_REQUEST
           TableName: ${self:provider.environment.CONNECTIONS_TABLE}
 
-    AttachmentsBucket:
-       Type: AWS::S3::Bucket
-       Properties:
-         BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
-         NotificationConfiguration:
-           LambdaConfigurations:
-             - Event: s3:ObjectCreated:*
-               Function: !GetAtt SendUploadNotificationsLambdaFunction.Arn
-         CorsConfiguration:
-           CorsRules:
-            - AllowedOrigins:
-               - '*'
-              AllowedHeaders:
-              - '*'
-              AllowedMethods:
-                - GET
-                - PUT 
-                - POST 
-                - DELETE 
-                - HEAD 
-              MaxAge: 3000
-
-    SendUploadNotificationsPermission:
-      Type: AWS::Lambda::Permission
+    ImagesTopic:
+      Type: AWS::SNS::Topic
       Properties:
-        FunctionName: {Ref: SendUploadNotificationsLambdaFunction}
-        Principal: s3.amazonaws.com
-        Action: lambda:InvokeFunction
-        SourceAccount: {Ref: AWS::AccountId}
-        SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
+        DisplayName: Image bucket topic
+        TopicName: ${self:custom.topicName}  
 
+    SNSTopicPolicy:
+      Type: AWS::SNS::TopicPolicy
+      Properties: 
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                AWS: "*"
+              Action: sns:Publish
+              Resource:
+                {Ref: ImagesTopic}
+              Condition:
+                ArnLike:
+                  AWS:SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}    
+      
+        Topics: 
+        - {Ref: ImagesTopic}  
+        
+
+    AttachmentsBucket:
+        Type: AWS::S3::Bucket
+        DependsOn: SNSTopicPolicy
+        Properties:
+          BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+          NotificationConfiguration:
+            TopicConfigurations:
+              - Event: s3:ObjectCreated:Put
+                Topic: {Ref: ImagesTopic}
+          CorsConfiguration:
+            CorsRules:
+             - AllowedOrigins:
+                - '*'
+               AllowedHeaders:
+               - '*'
+               AllowedMethods:
+                 - GET
+                 - PUT 
+                 - POST 
+                 - DELETE 
+                 - HEAD 
+               MaxAge: 3000
+
+#AttachmentsBucket:
+#  Type: AWS::S3::Bucket
+#  Properties:
+#    BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+#     NotificationConfiguration:
+#       LambdaConfigurations:
+#        - Event: s3:ObjectCreated:*
+#          Function: !GetAtt SendUploadNotificationsLambdaFunction.Arn
+#   CorsConfiguration:
+#      CorsRules:
+#       - AllowedOrigins:
+#          - '*'
+#         AllowedHeaders:
+#         - '*'
+#         AllowedMethods:
+#           - GET
+#            - PUT 
+#           - POST 
+#           - DELETE 
+#            - HEAD 
+#          MaxAge: 3000
+
+    #SendUploadNotificationsPermission:
+    #  Type: AWS::Lambda::Permission
+    #  Properties:
+    #    FunctionName: {Ref: SendUploadNotificationsLambdaFunction}
+    #    Principal: s3.amazonaws.com
+    #    Action: lambda:InvokeFunction
+    #    SourceAccount: {Ref: AWS::AccountId}
+    #    SourceArn: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}
+
+    # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html
+   
+    
+    ImagesSearch:
+      Type: AWS::Elasticsearch::Domain
+      Properties:
+        ElasticsearchVersion: '6.3'
+        DomainName: images-search-${self:provider.stage}
+        ElasticsearchClusterConfig:
+          DedicatedMasterEnabled: false
+          InstanceCount: '1'
+          ZoneAwarenessEnabled: false
+          InstanceType: t2.small.elasticsearch
+        EBSOptions:
+          EBSEnabled: true
+          Iops: 0
+          VolumeSize: 10
+          VolumeType: 'gp2'
+
+        AccessPolicies: 
+          Version: '2012-10-17'
+          Statement:
+            - Sid: ''
+              Effect: Allow
+              Principal:
+                AWS: '*' 
+              Action: 'es:ESHttp*'
+              Condition:
+                IpAddress:
+                  aws:SourceIp:
+                    - checkip.amazon.com
+              Resource: 'arn:aws:es:${self:provider.region}:123456789:domain/images-search-${self:provider.stage}/*'
+           
+  
     BucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
@@ -248,6 +402,40 @@ resources:
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'        
         Bucket: {Ref: AttachmentsBucket}  
+
+    KMSKey:
+      Type: AWS::KMS::Key
+      Properties:
+        Description: KMS Key to encrypt Auth0 secret
+        KeyPolicy:
+          Version: '2012-10-17'
+          Id: key-default-1
+          Statement:
+            - Sid: Allow administration of the key
+              Effect: Allow
+              Principal:
+                AWS:
+                  Fn::Join:
+                  - ':'
+                  - - 'arn:aws:iam:'
+                    - Ref: AWS::AccountId
+                    - 'root'
+              Action:
+                - 'kms:*'
+              Resource: '*'        
+
+    KMSKeyAlias:
+      Type: AWS::KMS::Alias
+      Properties:
+        AliasName: alias/auth0Key-${self:provider.stage}
+        TargetKeyId: {Ref: KMSKey}
+
+    Auth0Secret:
+      Type: AWS::SecretsManager::Secret
+      Properties:
+        Name: ${self:provider.environment.AUTH_0_SECRET_ID}
+        Description: Auth0 secret
+        KmsKeyId: {Ref: KMSKey}    
 
 
 
